--- a/index.html
+++ b/index.html
@@ -1,13 +1,20 @@
-<!Doctype html>
-<html>
+<html lang="en">
   <head>
-    <title>
-      Hello World
-    </title>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Material Icons -->
+    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
+    <!-- CSS File -->
+    <link rel="stylesheet" href="index.css" />
+    <title>Youtube Clone with HTML & CSS</title>
   </head>
   <body>
-    <h1>
-      Hello World
-    </h1>
-  </body>
+      <header class="header">.</header>
+      <main>
+          <div class="side-bar">.</div>
+          <div class="content">.</div>
+      </main>
+  <!-- Main Body Ends -->
+</body>
 </html>
