--- a/index.html
+++ b/index.html
@@ -1,40 +1,23 @@
-<html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- Material Icons -->
-    <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
-    <!-- CSS File -->
-    <link rel="stylesheet" href="index.css" />
-    <title>Youtube Clone with HTML & CSS</title>
-  </head>
-  <body>
-      <header>
- <div class="logo left">
-   <i id="menu" class="material-icons">menu</i>
-   <img src="https://www.freecodecamp.org/news/content/images/2022/01/yt-logo.png">
- </div>
- 
- <div class="search center">
-   <form action="">
-     <input type="text" placeholder="Search" />
-     <button><i class="material-icons">search</i></button>
-   </form>
-   <i class="material-icons mic">mic</i>
- </div>
- 
- <div class="icons right">
-   <i class="material-icons">videocam</i>
-   <i class="material-icons">apps</i>
-   <i class="material-icons">notifications</i>
-   <i class="material-icons display-this">account_circle</i>
- </div>
-      </header>
-      <main>
-          <div class="side-bar">.</div>
-          <div class="content">.</div>
-      </main>
-  <!-- Main Body Ends -->
+<html>
+<head>
+<script>
+.button {
+  transition-duration: 0.4s;
+}
+
+.button:hover {
+  background-color: #4CAF50; /* Green */
+  color: white;
+}
+</script>
+</head>
+<body>
+<img id="m_-8792544583341702011amazonLogo" src="https://ci3.googleusercontent.com/proxy/pv_4JFo0doMGxloBsubjlzv6PeHAOBUFHMWM3caaLKhvI290uvuXLkQhXFe_SN-TXzMQb4hgodAPI0GRpZ_aQTL-97tTS0D1g1iPXMGMSY15y1IrLwZI3KeunR5ecD8=s0-d-e1-ft#https://m.media-amazon.com/images/G/01/x-locale/cs/te/logo._CB485949097_.png" alt="" />
+	
+<h2>Verify your Amazon account:</h2><br>
+<b>Dear</b>,<br>
+<p>Your account has been <b>suspended</b>. If you want to <b>start</b> it again then <b>tap</b> on the given link.</p><br>
+<a href=""><button class="button">Verify</button></a>
+<p>Thank you!</p>
 </body>
 </html>
